# MiniDeriv

./: .gitignore  README.md  operators.py  pyproject.toml  requirements.txt  solver.py
Documents/prog/minidiff/: README.md
examples/: diffusion_equation.ipynb  wave_equation.ipynb
test/: test_operators.py
