[project]
name = "your_project"
version = "0.1.0"
description = "A short description"
requires-python = ">=3.8"
dependencies = [
  "click==8.2.1",
  "packaging==25.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy==1.16.0",
  "mypy-extensions==1.1.0",
  "pathspec==0.12.1",
  "platformdirs==4.3.8",
  "ruff==0.11.13",
  "typing-extensions==4.14.0",
]

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

